# task-tracker

./: .gitignore  README.md  docker-compose.yml
api/: .env  Cargo.toml  env.sh  package-lock.json  package.json  prisma.config.ts
api/.cargo/: config.toml
api/migrations/: 20260227160032_initial.down.sql  20260227160032_initial.up.sql  20260301140651_change_avatar.down.sql  20260301140651_change_avatar.up.sql  20260311143601_tags_and_colors.down.sql  20260311143601_tags_and_colors.up.sql
api/prisma/: gen-down.sh  gen-up.sh  schema.prisma
api/src/: app_resources.rs  cache.rs  cli.rs  config.rs  db.rs  error.rs  jwt.rs  lib.rs  main.rs  nats.rs  redis.rs  swagger.rs  utils.rs  validation.rs
api/src/db/: common.rs  status.rs  tag.rs  user.rs  workspace.rs  workspace_invite.rs  workspace_member.rs
api/src/entity/: auth.rs  common.rs  mod.rs  status.rs  tag.rs  user.rs  workspace.rs  workspace_invite.rs
api/src/error/: bad_request.rs  forbidden.rs  unauthotized.rs  validation.rs
api/src/mappings/: mod.rs
api/src/mappings/protocol_to_db/: user.rs
api/src/protocol/: auth.rs  common.rs  mod.rs  status.rs  tag.rs  user.rs  workspace.rs  workspace_invite.rs
api/src/protocol/error/: mod.rs
api/src/router/: auth.rs  avatar.rs  mod.rs  path_params.rs  user.rs  workspace.rs
api/src/router/extractors/: app_json.rs  auth.rs  mod.rs  req_ctx.rs  status.rs  tag.rs  workspace.rs
api/src/router/workspace/: avatar.rs  invite.rs  statuses.rs  tags.rs
api/src/services/: auth_service.rs  mod.rs  tag_service.rs  user_service.rs  workspace_invite_service.rs  workspace_member_service.rs  workspace_service.rs  workspace_statuses_service.rs
docs/: README.md
frontend/: .gitignore  .prettierignore  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
protocol/: Cargo.toml
protocol/src/: auth.rs
scripts/: create_local_bucket.sh  create_local_bucket_for-docker.sh  podman-play.sh
ts_protocol/: package.json
ts_protocol/bindings/: BadRequestError.ts  BadRequestErrorResponse.ts  ChangeAdminRequest.ts  ChangePasswordRequest.ts  ColorSchema.ts  CreateInviteRequest.ts  CreateStatusRequest.ts  CreateTagRequest.ts  CreateWorkspaceRequest.ts  DeleteInviteRequest.ts  FieldValidationErrorKind.ts  ForbiddenError.ts  ForbiddenErrorResponse.ts  LoginRequest.ts  LoginResponse.ts  RefreshTokenResponse.ts  (+24 more)
(+45 files in other folders)
