[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-nats = "0.46.0"
axum = { version = "0.8.8", features = ["json", "multipart", "query", "form", "macros"] }
axum-extra = "0.12.5"
axum-server = { version = "0.8.0", features = ["tokio-rustls"] }
bb8 = "0.9.1"
bb8-redis = "0.26.0"
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
enum_stringify = "0.6.4"
env_logger = "0.11.9"
futures = "0.3.32"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
log = "0.4.29"
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "json", "derive", "bigdecimal"] }
sqlx-cli = "0.8.6"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["macros", "net", "rt-multi-thread", "time", "tracing"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time", "fmt"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "serde-compat", "url-impl", "uuid-impl"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
hex = "0.4.3"
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.124.0"
nanoid = "0.4.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
async-trait = "0.1.89"
detrim = "0.1.6"
tower-http = { version = "0.6.8", features = ["trace"] }
