[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ts-rs = "12.0.1"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid", "preserve_order"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
